--- a/cuisines.html
+++ b/cuisines.html
@@ -4,6 +4,21 @@
 <html>
 <head>
 <title>Cuisines</title>
+<!-- Bootstrap CSS -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<!-- <link rel="stylesheet" href=
+"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src=
+"https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+    </script>
+    <script src=
+"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js">
+    </script> -->
+
 <link href="style.css" rel="stylesheet" type="text/css" />
 <script language="Javascript">
     function showform(dowhat) {
@@ -14,6 +29,12 @@
 			document.getElementById('browse').style.display = 'none';
 			document.getElementById('insert').style.display = 'block';
 			document.getElementById('update').style.display = 'none';
+			document.getElementById('delete').style.display = 'none';
+		}
+        else if (dowhat == 'update'){
+			document.getElementById('browse').style.display = 'none';
+			document.getElementById('insert').style.display = 'none';
+			document.getElementById('update').style.display = 'block';
 			document.getElementById('delete').style.display = 'none';
 		}
 		else if (dowhat == 'delete'){
@@ -46,59 +67,76 @@
 <body onload="browseCuisines()">
     <h1>Cuisines</h1>
 
-    [ <a href="restaurants.html">Restaurants</a> | <a href ="cities.html">Cities</a> | <a href="cuisines.html">Cuisines</a> | <a href="users.html">Users</a> | <a href="reviews.html">Reviews</a> ]
-    
+    [ <a href="/">Homepage</a> | <a href="restaurants.html">Restaurants</a> | <a href ="cuisines.html">Cuisines</a> | <a href="cities.html">Cities</a> | <a href="users.html">Users</a> | <a href="reviews.html">Reviews</a> | <a href ="restaurant_has_cuisines.html">Restaurants' Cuisines</a>]
+
+    <div id="search">
+        <form class="p-1 mb-1 bg-light border-bottom">
+          <input type="text" id="searchCuisineInput" class="form-control" autocomplete="false" placeholder="Search for a cuisine...">
+        </form>
+    </div>  
+
     <div id="browse">
-        <p><a href="#" onClick="showAll()">Display all forms</a></p>
-        <table border="1" cellpadding="5">
+        <p>
+            <!-- <button id="search-button" type="button" class="btn btn-primary">
+                <i class="fas fa-search"></i> -->
+        </p>
+        <p><a href="#" onClick="showAll()">Display all forms: Add, Update, or Delete an entry</a></p>
+        <p><button><a href="#" onClick="newCuisine()">Add a New Cuisine</a></button></p>
+
+        <table id="cuisines" class="table table-striped table-bordered table-hover" border="1" cellpadding="5"
+            data-search="true"
+            data-filter-control="true">
+            <thead class="table-dark">
             <tr>
-                <th><a href="#" onClick="newCuisine()">New</a></th>
-                <th></th>
-                <th>ID</th>
-                <th>Name</th>
+                <th scope="col">ID</th>
+                <th scope="col">Name</th>
+                <th scope=col" colspan="2">Actions</th>
             </tr>
+            </thead>
+            <tbody>
             <tr>
-                <td><a href="#" onClick="updateCuisine('this.cuisine_id')">Edit</a></td>
-                <td><a href="#" onClick="deleteRestaurant('this.cuisine_id')">Delete</a></td>
                 <td align="center" >1</td>
                 <td align="center">Mediterranean</td>
+                <td><a href="#" onClick="updateCuisine('this.cuisine_id')">Edit</a></td>
+                <td><a href="#" onClick="deleteRestaurant('this.cuisine_id')">Delete</a></td>
             </tr>
             <tr>
-                <td><a href="#" onClick="updateCuisine('this.cuisine_id')">Edit</a></td>
-                <td><a href="#" onClick="deleteCuisine('this.cuisine_id')">Delete</a></td>
                 <td align="center">2</td>
                 <td align="center">Japanese</td>
-            </tr>
-            <tr>
                 <td><a href="#" onClick="updateCuisine('this.cuisine_id')">Edit</a></td>
                 <td><a href="#" onClick="deleteCuisine('this.cuisine_id')">Delete</a></td>
+            </tr>
+            <tr>
                 <td align="center">3</td>
                 <td align="center">Cajun</td>
-            </tr>
-            <tr>
                 <td><a href="#" onClick="updateCuisine('this.cuisine_id')">Edit</a></td>
                 <td><a href="#" onClick="deleteCuisine('this.cuisine_id')">Delete</a></td>
+            </tr>
+            <tr>
                 <td align="center">4</td>
                 <td align="center">French</td>
-            </tr>
-            <tr>
                 <td><a href="#" onClick="updateCuisine('this.cuisine_id')">Edit</a></td>
                 <td><a href="#" onClick="deleteCuisine('this.cuisine_id')">Delete</a></td>
+            </tr>
+            <tr>
                 <td align="center">5</td>
                 <td align="center">Ramen</td>
-            </tr>
-            <tr>
                 <td><a href="#" onClick="updateCuisine('this.cuisine_id')">Edit</a></td>
                 <td><a href="#" onClick="deleteCuisine('this.cuisine_id')">Delete</a></td>
+            </tr>
+            <tr>
                 <td align="center">6</td>
                 <td align="center">Southern</td>
-            </tr>
-            <tr>
                 <td><a href="#" onClick="updateCuisine('this.cuisine_id')">Edit</a></td>
                 <td><a href="#" onClick="deleteCuisine('this.cuisine_id')">Delete</a></td>
+            </tr>
+            <tr>
                 <td align="center">7</td>
                 <td align="center">Vegetarian</td>
+                <td><a href="#" onClick="updateCuisine('this.cuisine_id')">Edit</a></td>
+                <td><a href="#" onClick="deleteCuisine('this.cuisine_id')">Delete</a></td>
             </tr>
+            </tbody>
         </table>
         <p>&nbsp;</p>
     </div>
@@ -106,7 +144,7 @@
         <form method="POST" id="addCuisine">
             <legend><strong>Add Cuisine</strong></legend>
                 <fieldset class="fields">
-                    <label>Name</label> <input type="text" name="cuisine_name">
+                    <label>Name: </label> <input type="text" name="cuisine_name">
                 </fieldset>
                     <input class="btn" type="submit" id="addCuisine" value="Add Cuisine">
                     <input class="btn" type="button" value="Cancel" onClick="browseCuisines()">
@@ -118,7 +156,17 @@
             <legend><strong>Update Cuisine</strong></legend>
                 <fieldset class="fields">
                     <input type="hidden" name="updateCuisineID" value="1">
-                    <label> Name: </label> <input type="text" name="cuisine_name" value="Mediterranean">
+                    <label>ID: </label>
+                        <select>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                        </select>
+                    <label> Name: <input type="text" name="cuisine_name"></label>
                 </fieldset>
                     <input class="btn" type="submit" id="updateSaveCuisine" value="Save Update to Cuisine">
                     <input class="btn" type="button" value="Cancel" onClick="browseCuisines()">
@@ -129,17 +177,6 @@
         <form method="POST" id="deleteCuisine">
             <legend><strong>Delete Cuisine</strong></legend>
                 <fieldset class="fields">
-                    <label>Select the cuisine you wish to delete:</label>
-                    <select>
-                        <option value="0">&nbsp;</option>
-                        <option value="1">Mediterranean</option>
-                        <option value="2">Japanese</option>
-                        <option value="3">Cajun</option>
-                        <option value="4">French</option>
-                        <option value="5">Ramen</option>
-                        <option value="6">Southern</option>
-                        <option value="7">Vegetarian</option>
-                    </select>
                     <p>Are you sure you wish to delete the following entry?</p>
                     <input type="hidden" name="cuisine_id" id="deleteCuisineID" value="1">
                     <label><strong> ID: </strong></label> 
@@ -149,6 +186,40 @@
                 <input class="btn" type="button" value="cancel" onClick="browseCuisines()">
         </form>
     </div> <!-- delete a cuisine -->
+
+    <nav aria-label="Cuisines page navigation">
+        <ul class="pagination">
+            <li class="page-item">
+              <a class="page-link" href="#" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+              </a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+              <a class="page-link" href="#" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+<!-- Search function to search through cuisines -->
+<script>
+    $(document).ready(function(){
+      $("#searchCuisineInput").on("keyup", function() {
+        var value = $(this).val().toLowerCase();
+        $("#cuisines tr").filter(function() {
+          $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+        });
+      });
+    });
+</script>
 
 </body>
 </html>
