--- a/restaurants.html
+++ b/restaurants.html
@@ -4,7 +4,40 @@
 <html>
 <head>
 <title>Restaurants</title>
-<link href="style.css" rel="stylesheet" type="text/css" />
+<!-- Bootstrap CSS -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=100%, initial-scale=1, shrink-to-fit=no">
+
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="extensions/filter-control/bootstrap-table-filter-control.css">
+<script src="extensions/filter-control/bootstrap-table-filter-control.js"></script>
+
+<!-- <link rel="stylesheet" href="extensions/sticky-header/bootstrap-table-sticky-header.css">
+<script src="extensions/sticky-header/bootstrap-table-sticky-header.js"></script>
+<script src="extensions/multiple-sort/bootstrap-table-multiple-sort.js"></script> -->
+
+<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js">
+</script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js">
+</script> -->
+
+  <!-- jQuery -->
+  <script type="text/javascript" 
+          src="https://code.jquery.com/jquery-3.5.1.js">
+  </script>
+<link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css">
+<script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js">
+</script>
+<script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js">
+</script>
+
+
+<link rel="stylesheet" href="mystyle.css">
+
 <script language="Javascript">
     function showform(dowhat) {
         /*
@@ -52,58 +85,75 @@
 <body onload="browseRestaurants()">
     <h1>Restaurants</h1>
 
-    [ <a href="restaurants.html">Restaurants</a> | <a href ="cities.html">Cities</a> | <a href="cuisines.html">Cuisines</a> | <a href="restaurants-cuisines.html" <a href="users.html">Users</a> | <a href="reviews.html">Reviews</a> ]
+    [ <a href="/">Homepage</a> | <a href="restaurants.html">Restaurants</a> | <a href ="cuisines.html">Cuisines</a> | <a href="cities.html">Cities</a> | <a href="users.html">Users</a> | <a href="reviews.html">Reviews</a> | <a href ="restaurant_has_cuisines.html">Restaurants' Cuisines</a>]
+    
+    <div id="search">
+        <form class="p-1 mb-1 bg-light border-bottom">
+          <input type="text" id="searchRestaurantInput" class="form-control" autocomplete="false" placeholder="Search for a restaurant...">
+        </form>
+    </div>  
     
     <div id="browse">
-        <p><a href="#" onClick="showAll()">Display all forms</a></p>
-        <table border="1" cellpadding="5">
+        <!-- <p><input type="text" id="searchRestaurantInput" onkeyup="myFunction()" placeholder="Search for a restaurant..."> -->
+        <p><a href="#" onClick="showAll()">Display all forms: Add, Update, or Delete an entry</a></p>
+        <p><button><a href="#" onClick="newRestaurant()">Add a New Restaurant</a></button></p>
+
+        <table id="restaurants" class="table table-striped table-bordered table-hover align-middle justify-content-center" border="1" cellpadding="5"
+            data-search="true"
+            data-filter-control="true"
+            data-show-columns="true"
+            data-visible="true"
+            data-sticky-header="true">
+            <thead class="table-dark justify-content-center">
             <tr>
-                <th><a href="#" onClick="newRestaurant()">New</a></th>
-                <th></th>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Website</th>
-                <th>Email</th>
-                <th>City</th>
-                <th>Cuisine 1</th>
-                <th>Cuisine 2</th>
+                <th class="header" scope="col" align="center">ID</th>
+                <th class="header" scope="col" align="center">Name</th>
+                <th class="header" scope="col" align="center">Website</th>
+                <th class="header" scope="col" align="center">Email</th>
+                <th class="header" scope="col" align="center">City</th>
+                <th class="header" scope="col" align="center">Cuisine 1</th>
+                <th class="header" scope="col" align="center">Cuisine 2</th>
+                <th class="header" scope="col" align="center">Cuisine 3</th>
+                <th class="header" scope="col" id="actions" colspan="2" align="center">Actions</th>
             </tr>
+            </thead>
             <tr>
-                <td><a href="#" onClick="updateRestaurant('this.restaurant_id')">Edit</a></td>
-                <td><a href="#" onClick="deleteRestaurant('this.restaurant_id')">Delete</a></td>
                 <td align="center" >1</td>
                 <td align="center">Savor</td>
                 <td align="center">https://savor.menu/</td>
-                <td><em>NULL</em></td>
+                <td align="center"><em>NULL</em></td>
                 <td align="center">San Francisco</td>
                 <td align="center">Mediterranean</td>
                 <td align="center">Vegetarian</td>
-            </tr>
-            <tr>
+                <td align="center"><em>NULL</em></td>
                 <td><a href="#" onClick="updateRestaurant('this.restaurant_id')">Edit</a></td>
                 <td><a href="#" onClick="deleteRestaurant('this.restaurant_id')">Delete</a></td>
+            </tr>
+            <tr>
                 <td align="center">2</td>
                 <td align="center">Marufuku Ramen</td>
                 <td align="center">https://www.marufukuramen.com/sanfrancisco</td>
-                <td><em>NULL</em></td>
+                <td align="center"><em>NULL</em></td>
                 <td align="center">San Francisco</td>
                 <td align="center">Ramen</td>
                 <td align="center">Japanese</td>
-            </tr>
-            <tr>
+                <td align="center">Vegetarian</td>
                 <td><a href="#" onClick="updateRestaurant('this.restaurant_id')">Edit</a></td>
                 <td><a href="#" onClick="deleteRestaurant('this.restaurant_id')">Delete</a></td>
+            </tr>
+            <tr>
                 <td align="center">3</td>
                 <td align="center">Screen Door Eastside</td>
                 <td align="center">https://screendoorrestaurant.com/</td>
-                <td><em>NULL</em></td>
+                <td align="center"><em>NULL</em></td>
                 <td align="center">Portland</td>
                 <td align='center'>Cajun</td>
                 <td align="center">Southern</td>
-            </tr>
-            <tr>
+                <td align="center"><em>NULL</em></td>
                 <td><a href="#" onClick="updateRestaurant('this.restaurant_id')">Edit</a></td>
                 <td><a href="#" onClick="deleteRestaurant('this.restaurant_id')">Delete</a></td>
+            </tr>
+            <tr>
                 <td align="center">4</td>
                 <td align="center">Republique</td>
                 <td align="center">https://republiquela.com/</td>
@@ -111,6 +161,9 @@
                 <td align="center">Los Angeles</td>
                 <td align="center">French</td>
                 <td align="center"><em>NULL</em></td>
+                <td align="center"><em>NULL</em></td>
+                <td><a href="#" onClick="updateRestaurant('this.restaurant_id')">Edit</a></td>
+                <td><a href="#" onClick="deleteRestaurant('this.restaurant_id')">Delete</a></td>
             </tr>
         </table>
         <p>&nbsp;</p>
@@ -130,7 +183,6 @@
                         <option value="4">San Diego</option>
                         <option value="5">Seattle</option>
                     </select>
-                    <p>
                     <label>Cuisine 1: </label><select name="cuisine1">
                         <option value="0">&nbsp;</option>
                         <option value="1">Mediterranean</option>
@@ -142,6 +194,16 @@
                         <option value="7">Vegetarian</option>
                     </select>
                     <label>Cuisine 2: </label><select name="cuisine2">
+                        <option value="0">&nbsp;</option>
+                        <option value="1">Mediterranean</option>
+                        <option value="2">Japanese</option>
+                        <option value="3">Cajun</option>
+                        <option value="4">French</option>
+                        <option value="5">Ramen</option>
+                        <option value="6">Southern</option>
+                        <option value="7">Vegetarian</option>
+                    </select>
+                    <label>Cuisine 3: </label><select name="cuisine3">
                         <option value="0">&nbsp;</option>
                         <option value="1">Mediterranean</option>
                         <option value="2">Japanese</option>
@@ -173,7 +235,6 @@
                             <option value="4">San Diego</option>
                             <option value="5">Seattle</option>
                         </select>
-                        <p>
                             <label>Cuisine 1: </label><select name="cuisine1">
                                 <option value="0">&nbsp;</option>
                                 <option value="1">Mediterranean</option>
@@ -194,6 +255,16 @@
                                 <option value="6">Southern</option>
                                 <option value="7">Vegetarian</option>
                             </select>
+                            <label>Cuisine 3: </label><select name="cuisine3">
+                                <option value="0">&nbsp;</option>
+                                <option value="1">Mediterranean</option>
+                                <option value="2">Japanese</option>
+                                <option value="3">Cajun</option>
+                                <option value="4">French</option>
+                                <option value="5">Ramen</option>
+                                <option value="6">Southern</option>
+                                <option value="7">Vegetarian</option>
+                            </select>
                 </fieldset>
                     <input class="btn" type="submit" id="updateSaveRestaurant" value="Save Update to Restaurant">
                     <input class="btn" type="button" value="Cancel" onClick="browseRestaurants()">
@@ -204,13 +275,6 @@
         <form method="POST" id="deleteRestaurant">
             <legend><strong>Delete Restaurant</strong></legend>
                 <fieldset class="fields">
-                    <label>Select the restaurant you wish to delete:</label>
-                    <select name="restaurant_id">
-                        <option id="1" value="1">Savor</option>
-                        <option id="2" value="2">Marufuku Ramen</option>
-                        <option id="3" value="3">Screen Door Eastside</option>
-                        <option id="4" value="4">Republique</option>
-                    </select>    
                     <p>Are you sure you wish to delete the following entry?</p>
                     <input type="hidden" name="restaurant_id" id="deleteRestaurantID" value="2">
                     <label><strong> ID: </strong></label>
@@ -220,6 +284,45 @@
                 <input class="btn" type="button" value="cancel" onClick="browseRestaurants()">
         </form>
     </div> <!-- delete a restaurant -->
+
+    <nav aria-label="Restaurants page navigation">
+        <ul class="pagination">
+            <li class="page-item">
+              <a class="page-link" href="#" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+              </a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+              <a class="page-link" href="#" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+<!-- Search function to search through restaurants -->
+<script>
+    $(document).ready(function(){
+      $("#searchRestaurantInput").on("keyup", function() {
+        var value = $(this).val().toLowerCase();
+        $("#restaurants tr").filter(function() {
+          $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+        });
+      });
+    });
+</script>
+
+<!-- <script>
+    $('#restaurants').DataTable();
+    // $('.dataTables_length').addClass('bs-select');
+</script> -->
 
 </body>
 </html>
